--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
-<!DOCTYPE HTML>
-<html lang = "en">
-<head>
-  <title>index.html</title>
-  <meta charset = "UTF-8" />
-</head>
-<body>
-  <p>
-    The purpose of this application is to track the 
-    users blood alcohol content/concentration (BAC) 
-    during an isolated period of alcohol consumption. 
-    The calculation is estimated using an abbreviated 
-    version of the Widmark formula known as the 8/10 Method. 
-    The user’s BAC at any given time is determined using 
-    his or her sex, weight, current number of alcoholic 
-    drinks consumed, and the time elapsed since alcohol 
-    consumption began.
-  </p>
-</body>
-</html>
+<!DOCTYPE html>
+    <html>
+    <head>
+      <meta charset='utf-8'>
+      <meta name='viewport' content='width=device-width'>
+      <title>Support</title>
+      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
+    </head>
+    <body>
+      <p>
+        The purpose of this application is to track the 
+        users blood alcohol content/concentration (BAC) 
+        during an isolated period of alcohol consumption. 
+        The calculation is estimated using an abbreviated 
+        version of the Widmark formula known as the 8/10 Method. 
+        The user’s BAC at any given time is determined using 
+        his or her sex, weight, current number of alcoholic 
+        drinks consumed, and the time elapsed since alcohol 
+        consumption began.
+      </p>
+    </body>
+    </html>
