--- a/index.html
+++ b/index.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-    <html>
-    <head>
-      <meta charset='utf-8'>
-      <meta name='viewport' content='width=device-width'>
-      <title>Support</title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-    </head>
-    <body>
-      <p>
-        The purpose of this application is to track the 
-        users blood alcohol content/concentration (BAC) 
-        during an isolated period of alcohol consumption. 
-        The calculation is estimated using an abbreviated 
-        version of the Widmark formula known as the 8/10 Method. 
-        The user’s BAC at any given time is determined using 
-        his or her sex, weight, current number of alcoholic 
-        drinks consumed, and the time elapsed since alcohol 
-        consumption began.
-      </p>
-    </body>
-    </html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Frank Dulko's Apps</title>
+</head>
+<body>
+    <h1>Frank Dulko's Apps</h1>
+    <ol>
+        <li>
+            <h3>Hop! - Social</h3>
+            <ul>
+                <li>
+                    <a href="/hop/privacy.html">Privacy</a>
+                </li>
+                <li>
+                    <a href="/hop/support.html">Support</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+          <h3>Does This Person Exist?</h3>
+          <ul>
+              <li>
+                  <a href="/dtpe/privacy.html">Privacy</a>
+              </li>
+              <li>
+                  <a href="/dtpe/support.html">Support</a>
+              </li>
+          </ul>
+      </li>
+    </ol>
+</body>
+</html>
