--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frank Dulko's Apps</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Frank Dulko's Apps</h1>
     <ol>
-        <li>
-            <h3>Hop! - Social</h3>
-            <ul>
-                <li>
-                    <a href="/hop/privacy.html">Privacy</a>
-                </li>
-                <li>
-                    <a href="/hop/support.html">Support</a>
-                </li>
-            </ul>
-        </li>
-        <li>
-          <h3>Does This Person Exist?</h3>
-          <ul>
-              <li>
-                  <a href="/dtpe/privacy.html">Privacy</a>
-              </li>
-              <li>
-                  <a href="/dtpe/support.html">Support</a>
-              </li>
-          </ul>
+      <li>
+        <h3>Hop! - Social</h3>
+        <ul>
+          <li>
+            <a href="/hop/marketing.html">Marketing</a>
+          </li>
+          <li>
+            <a href="/hop/privacy.html">Privacy</a>
+          </li>
+          <li>
+            <a href="/hop/support.html">Support</a>
+          </li>
+        </ul>
+      </li>
+      <li>
+        <h3>Does This Person Exist?</h3>
+        <ul>
+          <li>
+            <a href="/dtpe/marketing.html">Marketing</a>
+          </li>
+          <li>
+            <a href="/dtpe/privacy.html">Privacy</a>
+          </li>
+          <li>
+            <a href="/dtpe/support.html">Support</a>
+          </li>
+        </ul>
       </li>
     </ol>
-</body>
+  </body>
 </html>
